# ai-memory-hermes-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/patterns/: PATTERNS-1.md  PATTERNS-2.md  PATTERNS-3.md
.planning/plans/phase-1/: PLAN-CHECK.md  PLAN.md
.planning/plans/phase-2/: PLAN-CHECK.md  PLAN.md
.planning/plans/phase-3/: PLAN-CHECK.md  PLAN.md
.planning/plans/phase-4/: PLAN-CHECK.md  PLAN.md
.planning/plans/phase-5/: 05-01-PLAN.md
docs/: HERMES_MEMORY_PLUGIN_AI-MEMORY.md  common-problems.md  guide.md  reference.md
docs/superpowers/specs/: 2026-07-02-hermes-ai-memory-plugin-design.md
plugins/memory/ai-memory/: README.md  __init__.py  cli.py  client.py  config.py  plugin.yaml  provider.py
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh  update.ps1  update.sh
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_entry.py  test_provider.py
