[project]
name = "ai-memory-hermes-plugin"
version = "0.1.0"
description = "Hermes Agent memory provider backed by ai-memory"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# "ai-memory" is excluded from discovery only (dash in name is not a valid
# package identifier). Type-checking still follows imports via test files.
exclude = ["ai-memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 89
